--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>合体プロキシ クライアント</title>
+<title></title>
 <style>
 body { margin:0; font-family: sans-serif; background:#000; color:#fff; }
 header { 
@@ -60,7 +60,7 @@ iframe {
 </header>
 
 <div id="iframeContainer">
-  <iframe id="displayFrame" src="about:blank"></iframe>
+  <iframe id="displayFrame" src="about:blank" sandbox="allow-scripts allow-same-origin allow-forms allow-popups"></iframe>
 </div>
 
 <script>
